--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,9 @@
 # How long should the TNT take to detonate in ticks? (80 ticks is normal tnt)
 fuseLength: 20
 
+# How big should the TNT explosion power be? (4 for normal tnt)
+explosionPower: 3
+
 # // MESSAGES \\
 # Note: You can use HEX color codes, just make sure they follow the following format -> &#FFFFFF Example: &#9232A3
 prefix: "&#9232A3[&#3FAFFFExplosiveArrows&#9232A3]&#3FAFFF "
